--- a/css/gallery.css
+++ b/css/gallery.css
@@ -24,7 +24,7 @@
   margin-top: -22px;
   font-weight: 400;
   font-size: 28px;
-  color: var(--brand-color);
+  color: var(--text-color-accent-dark);
   transition: 0.5s ease;
   user-select: none;
   cursor: pointer;
@@ -41,7 +41,7 @@
 }
 
 .gallery-slider-number {
-  color: var(--alternate-text-color);
+  color: var(--text-color-accent-dark);
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -68,15 +68,18 @@
     max-width: 100%;
   }
 
+  .gallery-arrow-next, .gallery-arrow-prev {
+    padding: 9px 16px;
+    background-color: var(--alternate-text-color);
+    opacity: 0.6;
+    border-radius: 50%;
+  }
+
   .gallery-arrow-next {
-    right: 0;
-    color: var(--alternate-text-color);
-    padding-left: 50px;
+    right: 10px;
   }
 
   .gallery-arrow-prev {
-    left: 0;
-    color: var(--alternate-text-color);
-    padding-right: 50px;
+    left: 10px;
   }
 }
