--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -53,7 +53,6 @@
 
 .testimonials-item-date {
   font-size: 14px;
-  color: var(--text-color-accent-light);
 }
 
 @media (max-width: 991px) {
